--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 {
-  "name": "@seneca/github-provider",
+  "name": "@seneca/request",
   "version": "0.2.0",
-  "main": "dist/github-provider.js",
+  "main": "dist/request.js",
   "type": "commonjs",
-  "types": "dist/github-provider.d.ts",
-  "description": "Handle incoming messages within other frameworks.",
-  "homepage": "https://github.com/senecajs/seneca-github-provider",
+  "types": "dist/request.d.ts",
+  "description": "Outbound Web Request Plugin for Seneca",
+  "homepage": "https://github.com/senecajs/seneca-request",
   "keywords": [
     "seneca",
-    "github-provider"
+    "request"
   ],
   "author": "Richard Rodger - richardrodger.com",
   "repository": {
     "type": "git",
-    "url": "git://github.com/senecajs/seneca-github-provider.git"
+    "url": "git://github.com/senecajs/seneca-request.git"
   },
   "scripts": {
     "test": "jest --coverage",
@@ -36,14 +36,12 @@
   ],
   "devDependencies": {
     "@seneca/doc": "^4.0.1",
-    "@seneca/provider": "^0.2.0",
     "@types/jest": "^27.0.3",
     "@types/node": "^16.11.12",
     "esbuild": "^0.14.3",
     "esbuild-jest": "^0.5.0",
     "jest": "^27.4.4",
     "seneca": ">=3",
-    "seneca-entity": "^16.0.3",
     "seneca-msg-test": "^3.2.0",
     "seneca-promisify": ">=2",
     "typescript": "^4.5.3"
@@ -53,7 +51,5 @@
     "seneca-promisify": ">=2"
   },
   "dependencies": {
-    "@octokit/rest": "^18.12.0",
-    "msw": "^0.36.4"
   }
 }
