--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "seneca": ">=3",
     "seneca-msg-test": "^3.2.0",
     "seneca-promisify": ">=2",
+    "serve": "^13.0.2",
     "typescript": "^4.5.5"
   },
   "peerDependencies": {
@@ -51,5 +52,6 @@
     "seneca-promisify": ">=2"
   },
   "dependencies": {
+    "node-fetch": "^2.6.7"
   }
 }
