--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   ],
   "devDependencies": {
     "@seneca/doc": "^4.0.1",
+    "@seneca/maintain": "^0.0.15",
     "@types/jest": "^27.4.0",
     "@types/node": "^17.0.19",
     "esbuild": "^0.14.23",
